loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:2: error: '<-' expected but '=' found.
for (x=0 to x=8) { 
      ^LoopCourse:6: error: illegal start of simple expression
	}
        ^